# helios

./: .env.example  .gitignore  README.md  pyproject.toml
evals/fixtures/skew_join_orders/: fixture.yaml  job.json  seed.sql
evals/fixtures/skew_join_orders/notebooks/: transform.py
evals/fixtures/skew_join_scoped/: fixture.yaml  job.json  seed.sql
evals/fixtures/skew_join_scoped/notebooks/: daily_revenue.py  enrich_with_targets.py  ingest_orders.py  ingest_users.py  publish_dashboard.py
scripts/: smoke.py  smoke_github.py
src/helios/: agent.py  cli.py
src/helios/evals/: __init__.py  anomaly_evaluator.py  baselines.py  fixtures.py  harness.py  nondeterminism.py  propose.py  runner.py  sandbox.py
src/helios/evals/scorers/: __init__.py  correctness.py  diagnosis.py  outcome.py
src/helios/tools/: __init__.py  agents.py  databricks.py  github.py  memory.py  terminal.py
